<resources>
    <string name="app_name">Password manager</string>
    <string name="button_next">Next</string>
    <string name="button_ok">OK</string>
    <string name="button_skip">Skip</string>
    <string name="button_start">Start</string>
    <string name="button_finish">Finish</string>
    <string name="passwords_create_password_button">Create password</string>
    <string name="password_test_button_test">Test password</string>
    <string name="button_copy">Copy</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="passwords">Passwords</string>
    <string name="create">Generate</string>
    <string name="test">Test</string>
    <string name="settings">Settings</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_delete">Delete</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_save">Save</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="error_message">Something went wrong</string>
    <string name="view_error_text">Unexpected error occurred</string>
    <string name="biometric_authentication_cancelled">Biometric authentication was cancelled</string>
    <string name="biometric_authentication_error">Error occurred while authenticating</string>
    <string name="biometric_authentication_failed">Biometric authentication failed</string>
    <string name="biometric_authentication_header">Log in with biometrics</string>
    <string name="biometric_authentication_prompt_title">Biometric login</string>
    <string name="data_migrating">Synchronizing the data…</string>
    <string name="create_pin_header">Create pin</string>
    <string name="create_pin_error">Error occurred while creating the pin</string>
    <string name="create_pin_wrong_pin">Pin does not meet the conditions</string>
    <string name="log_in_error">Error occurred while checking the pin</string>
    <string name="log_in_header">Log in</string>
    <string name="log_in_wrong_pin">Pin is incorrect</string>
    <string name="edit_password_button_edit">Edit password</string>
    <string name="edit_password_edited_successfully">Password was updated</string>
    <string name="edit_password_error">Error occurred while editing the password</string>
    <string name="generate_create_password">Generate password</string>
    <string name="generate_password_error">Error occurred while creating the password</string>
    <string name="generate_password_length">Password length:</string>
    <string name="generate_password_save_button_description">Save password button</string>
    <string name="item_password_expire_date">Expiration date: %1$s</string>
    <string name="item_password_password">Password: %1$s</string>
    <string name="notification_worker_message">Your password from %1$s expired. Please consider the update of this password</string>
    <string name="notification_worker_title">Your password expired</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="password_details_delete_password_error">Error occurred while deleting the password</string>
    <string name="password_details_delete_password_message">Are you sure you want to remove this password?</string>
    <string name="password_details_delete_password_title">Delete password</string>
    <string name="password_details_notification_set">Password expiration notification was scheduled</string>
    <string name="password_details_password_deleted">Password was deleted</string>
    <string name="password_details_password_score_error">Error occurred while checking passwords strength</string>
    <string name="password_details_password_strength">Password strength:</string>
    <string name="passwords_get_passwords_error">Error occurred while getting the passwords</string>
    <string name="passwords_no_passwords">You did not add passwords yet.</string>
    <string name="password_validation_alphabetical_pattern">Does not contain alphabetical repetitions</string>
    <string name="password_validation_common_password">Not popular password</string>
    <string name="password_validation_error">Error occurred while validating the password</string>
    <string name="password_validation_keyboard_pattern">Does not contain keyboard repetitions</string>
    <string name="password_validation_length">Has at least 8 characters</string>
    <string name="password_validation_letter">Contains letter</string>
    <string name="password_validation_name">Does not contain first name</string>
    <string name="password_validation_number">Contains number</string>
    <string name="password_validation_special_character">Contains special character</string>
    <string name="password_validation_uppercase">Contains a capital letter</string>
    <string name="password_validation_word">Does not contain any word</string>
    <string name="save_password_error">Error occurred while saving the password</string>
    <string name="save_password_header">Save password</string>
    <string name="save_password_saved">Password was saved</string>
    <string name="save_password_platform_name">Platform name</string>
    <string name="save_password_password">Password</string>
    <string name="save_password_website">Website</string>
    <string name="save_password_show_reminder_notification">Would you like to receive a notification reminding you to change your password?</string>
    <string name="save_password_button_save">Save password</string>
    <string name="settings_dialog_password_validity">Choose for how long the password will be valid</string>
    <string name="settings_info_dialog_title">The format of imported data</string>
    <string name="settings_info_dialog_message">Data which are not encrypted should be saved in txt file with given format:\n\nplatform:password\nplatform2:password2</string>
    <string name="settings_error_get_biometric_auth_setting">Error occurred while getting saved options</string>
    <string name="settings_error_on_saving_biometric_auth_setting">Error occurred while saving options</string>
    <string name="settings_error_saving_password_validity">Error occurred while saving the password validity time</string>
    <string name="settings_export_passwords">Export passwords</string>
    <string name="settings_import_passwords">Import passwords</string>
    <string name="settings_notification_num_of_days">Select the number of days after which the password will expire</string>
    <string name="settings_screen_biometric_auth_option">Turn on biometric authentication</string>
    <string name="settings_screen_title">Settings</string>
    <string name="settings_turn_on_autofill_service">Turn on password autofill service</string>
    <string name="autofill_password_authentication_prompt_message">Select password in the app</string>
    <string name="autofill_create_password_authentication_prompt_message">Create password in the app</string>
    <string name="autofill_dialog_save_package_name_title">Remember password</string>
    <string name="autofill_dialog_save_package_name_message">Do you want to remember this password for future autofill for this app?</string>
    <string name="autofill_get_passwords_error">Error occurred while getting the passwords</string>
    <string name="autofill_generate_password">Generate password</string>
    <string name="autofill_save_password_button_save">Save and autofill</string>
    <string name="warning_icon">Icon informing about password expiration</string>
    <string name="warning_password_expired">Your password expired!</string>
    <string name="warning_password_correct">Your password is save</string>
    <string name="warning_password_expiring">Your password will expire soon!</string>
    <string name="notification_permission_title">Notifications</string>
    <string name="notification_permission_description">will be used to remind you about expired passwords</string>
    <string name="permission_image_description">Icon of permission screen</string>
    <string name="permission_button_access">Provide permission</string>
    <string name="permission_button_settings">Open settings</string>
    <string name="export_screen_header">Export</string>
    <string name="export_screen_description">your passwords to file in \"Download\" folder. You can also encrypt exported passwords.</string>
    <string name="export_result_screen_success_header">Passwords</string>
    <string name="export_result_screen_success_description">were successfully exported. You can find them in \"Download\" folder on your device.</string>
    <string name="export_result_screen_failure_header">Error</string>
    <string name="export_result_screen_failure_description">occurred while exporting the passwords.</string>
    <string name="export_screen_button">Export</string>
    <string name="import_screen_header">Import</string>
    <string name="import_screen_description">your passwords from chosen file.</string>
    <string name="import_result_screen_success_header">Passwords</string>
    <string name="import_result_screen_success_description">were successfully imported.</string>
    <string name="import_result_screen_failure_header">Error</string>
    <string name="import_result_screen_failure_description">occurred while importing the passwords.</string>
    <string name="import_screen_button">Import</string>
    <string name="password_transfer_encryption_question">Are data encrypted?</string>
    <string name="password_transfer_screen_hint">Password to encrypted data</string>
    <string name="generate_password">Generate</string>
    <string name="generate_password_description">save password with chosen length</string>
    <string name="test_password">Test</string>
    <string name="test_password_description">the password and check if it\'s save enough</string>
    <string name="licenses_title">Licences</string>
    <string name="licenses_libraries">Open source licenses</string>
    <string name="licenses_animations">Lottie animations</string>
    <string name="licenses_font">M PLUS Rounded 1c</string>
    <string name="licenses_graphics">Graphics licenses</string>
    <string name="password_test_hint">Provide password</string>
    <string name="progress_value">%d%%</string>
    <string name="copy_button">Copy password button</string>
    <string name="settings_button">Settings button</string>
    <string name="edit_password_header">Edit password</string>
    <string name="options">Options</string>
    <string name="import_info">Import info</string>
    <string name="message_password_copied_to_clipboard">Password was copied</string>
    <string name="hidden_text_view_button_description">Change visibility of the text</string>
    <string name="app_icon_description">App icon</string>
</resources>