<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/permissionIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_16"
        android:layout_weight="3"
        android:scaleType="fitXY"
        android:contentDescription="@string/permission_image_description"
        android:src="@drawable/ic_push_notification" />

    <TextView
        android:id="@+id/permissionTitle"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_16"
        android:text="@string/notification_permission_title" />

    <TextView
        android:id="@+id/permissionDescription"
        style="@style/Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:text="@string/notification_permission_description" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/permissionButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        android:backgroundTint="@drawable/selector_default_button"
        android:enabled="true"
        android:text="@string/permission_button_access" />

</LinearLayout>