<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mateuszholik.passwordgenerator.ui.autofill.createpassword.AutofillCreatePasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/margin_16"
            app:layout_constraintBottom_toTopOf="@id/savePasswordButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/margin_16"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="false"
                    app:lottie_rawRes="@raw/save_password" />

                <TextView
                    android:id="@+id/header"
                    style="@style/MediumHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:text="@string/save_password_header"
                    android:textColor="?colorSecondary" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/platformNameET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/save_password_platform_name"
                        android:text="@={viewModel.platformName}"
                        android:textSize="@dimen/text_size_18" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/DefaultEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_16"
                    app:counterMaxLength="25">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordValueET"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/save_password_password"
                        android:maxLength="25"
                        android:text="@={viewModel.password}"
                        android:textSize="@dimen/text_size_18" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/generatePasswordButton"
                    style="@style/TextButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:onClick="@{() -> viewModel.generatePassword()}"
                    android:text="@string/autofill_generate_password" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_password_show_reminder_notification"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    android:checked="@={viewModel.isExpiring}"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/autofill_dialog_save_package_name_message"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginHorizontal="@dimen/margin_16"
                    app:isVisible="@{viewModel.shouldShowSavePackageNameOption}"
                    android:checked="@={viewModel.shouldSavePackageName}"/>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/savePasswordButton"
            style="@style/Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:enabled="@{viewModel.isButtonEnabled}"
            android:onClick="@{() -> viewModel.savePassword()}"
            android:text="@string/autofill_save_password_button_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
