<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.mateuszholik.passwordgenerator.ui.settings.SettingsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/margin_16"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/settings_animation" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <androidx.appcompat.widget.SwitchCompat
                style="@style/DefaultText"
                android:id="@+id/shouldUseBiometricAuthBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                android:text="@string/settings_screen_biometric_auth_option"
                app:onSwitchValueChanged="@{(value) -> viewModel.onValueChanged(value)}"
                app:setSwitchValue="@{viewModel.shouldUseBiometricAuthentication}" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <com.mateuszholik.passwordgenerator.uicomponents.buttons.SettingsButton
                android:id="@+id/passwordValidityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                app:buttonText="@string/settings_notification_num_of_days" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <com.mateuszholik.passwordgenerator.uicomponents.buttons.SettingsButton
                android:id="@+id/exportPasswordsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                app:buttonText="@string/settings_export_passwords" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <com.mateuszholik.passwordgenerator.uicomponents.buttons.SettingsButton
                android:id="@+id/importPasswordsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_16"
                app:buttonText="@string/settings_import_passwords" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

        </LinearLayout>

    </ScrollView>
</layout>